2004-02-06  James Henstridge  <james@daa.com.au>

	* *.jhbuildrc: update sample jhbuildrc files to take into account
	recent changes.

	* jhbuild/frontends/gtkui.py (BUILD_SCRIPT): define BUILD_SCRIPT
	in this module, so that "jhbuild gui" doesn't raise an uncaught
	exception.  Reported as bug #133630.

	* jhbuild/commands/base.py (do_shell): fix up reference to
	"user_shell" that broke in the reorg.  This command should work
	again now (fixes bug #133594).

	* jhbuild/modtypes/tarball.py (Tarball.do_start): replace use of
	string.find with a string method, and remove the import of the
	string module.

2004-02-05  Marco Pesenti Gritti  <marco@gnome.org>

	* modulesets/gnome26.modules:

	Use mozilla 1.6

2004-02-05  Johan Dahlin  <johan@gnome.org>

	* jhbuild/modtypes/tarball.py: Import os and string here

	* jhbuild/modtypes/tarball.py (Tarball.do_configure): s/ret/res/

2004-02-05  James Henstridge  <james@daa.com.au>

	Modified version of Paolo Borelli's patch from bug #123304:
	* jhbuild/main.py (help): add to help output.

	* jhbuild/commands/base.py (do_list): add -r flag.

	* jhbuild/modtypes/tarball.py (Tarball.get_revision): return
	package version.

	* jhbuild/modtypes/base.py (Package.get_revision): function to get
	version/revision of package.
	(CVSModule.get_revision): return CVS revision/branch tag.

2004-02-05  James Henstridge  <james@daa.com.au>

	* modulesets/freedesktop.modules (hal): applied patch from Thom
	May to build freedesktop.org HAL (bug #133314).
	(icon-slicer): another patch from Thom (bug #133430).

	* *: merge the jhbuild-ng branch back to head.  Things appear to
	be functioning correctly now.

2004-02-05  James Henstridge  <james@daa.com.au>

	* jhbuild/commands/sanitycheck.py (do_sanitycheck): new "jhbuild
	sanitycheck" that can be used to check whether the build
	environment is sane.  At the moment, it just checks whether
	various tools are available.  Will be expanded later on.
