@@ -18,7 +18,7 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
-import sys, os, string, getopt
+import sys, os, getopt
 
 import jhbuild.config
 import jhbuild.commands
