@@ -1,3 +1,12 @@
+2004-02-07  James Henstridge  <james@daa.com.au>
+
+	* jhbuild/utils/cvs.py (login): same here.
+
+	* jhbuild/config.py (Config.setup_env): same here.
+
+	* jhbuild/commands/base.py: convert uses of string module
+	functions to string methods.
+
 2004-02-06  James Henstridge  <james@daa.com.au>
 
 	* *.jhbuildrc: update sample jhbuildrc files to take into account
